[gd_scene load_steps=7 format=3 uid="uid://dpogaavnre2lf"]

[ext_resource type="Theme" uid="uid://t8gshn41l055" path="res://assets/UI/SimpleBox.tres" id="1_ccef3"]
[ext_resource type="Script" uid="uid://7c75gf8eb6ff" path="res://src/Menus/Editor/EditorStart/editor_start.gd" id="1_yri7g"]
[ext_resource type="FontFile" uid="uid://buaj0e6ma8lke" path="res://assets/fonts/Lemon Days.ttf" id="2_6aefx"]
[ext_resource type="Texture2D" uid="uid://f6sytssnr3aa" path="res://assets/images/UI/buttonNormal.png" id="3_yri7g"]
[ext_resource type="Texture2D" uid="uid://ds6mc7tp31i8t" path="res://assets/images/UI/buttonPressed.png" id="4_4w1vh"]
[ext_resource type="Texture2D" uid="uid://hp1uhoihkab3" path="res://assets/images/UI/buttonHover.png" id="5_pt3mc"]

[node name="EditorStart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yri7g")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -500.0
offset_right = 650.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ccef3")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6aefx")
theme_override_font_sizes/font_size = 128
text = "Select an option:"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NewButton" type="TextureButton" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_yri7g")
texture_pressed = ExtResource("4_4w1vh")
texture_hover = ExtResource("5_pt3mc")

[node name="Label" type="Label" parent="Panel/VBoxContainer/Buttons/NewButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_6aefx")
theme_override_font_sizes/font_size = 64
text = "New level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadButton" type="TextureButton" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_yri7g")
texture_pressed = ExtResource("4_4w1vh")
texture_hover = ExtResource("5_pt3mc")

[node name="Label" type="Label" parent="Panel/VBoxContainer/Buttons/LoadButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_6aefx")
theme_override_font_sizes/font_size = 64
text = "load level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_yri7g")
texture_pressed = ExtResource("4_4w1vh")
texture_hover = ExtResource("5_pt3mc")

[node name="Label" type="Label" parent="Panel/VBoxContainer/Buttons/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_6aefx")
theme_override_font_sizes/font_size = 84
text = "menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/BackButton" to="." method="_on_back_button_pressed"]
